--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -75,7 +75,7 @@
 
   <div id="content"></div>
 
-  <div class="main">
+  <div class="main marketing">
 
 
     <section class="hero-section hero-section-2 ptb-100">
