--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -18,7 +18,6 @@
 
   <title>Retrospected</title>
 
-
   <script>
     window.__env__ = {
       GOOGLE_ANALYTICS_ID: 'NO_GA',
@@ -75,7 +74,7 @@
 
   <div id="content"></div>
 
-  <div class="main marketing">
+  <div class="main marketing-content">
 
 
     <section class="hero-section hero-section-2 ptb-100">
@@ -559,11 +558,11 @@
     </section>
   </div>
 
-  <div class="shape-img subscribe-wrap">
+  <div class="shape-img subscribe-wrap marketing-content">
     <img src="img/footer-top-shape.png" alt="footer shape" class="img-fluid" />
   </div>
 
-  <footer class="footer-section">
+  <footer class="footer-section marketing-content">
     <div class="footer-top pt-150 pb-5 background-img-2" style="
           background: url('screens/bottom.png') no-repeat center top / cover;
         ">
