--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -488,11 +488,11 @@
               </div>
           </div>
           <div class="row justify-content-center">
-              <div class="col-lg-4 col-md">
+              <div class="col-lg-3 col-md">
                   <div class="card text-center single-pricing-pack">
                       <div class="pt-4"><h5>Basic</h5></div>
                       <div class="pricing-img mt-4">
-                          <img src="img/basic.svg" alt="pricing img" class="img-fluid">
+                        <img src="%PUBLIC_URL%/marketing/img/pricing-free.svg" alt="pricing img" class="img-fluid">
                       </div>
                       <div class="card-header py-4 border-0 pricing-header">
                           <div class="h1 text-center mb-0"><span class="price font-weight-bolder">Free</span></div>
@@ -505,15 +505,15 @@
                               <li>Post grouping</li>
                               <li>Anonymouns Accounts</li>
                           </ul>
-                          <a href="#" class="btn outline-btn mb-3" target="_blank">Purchase now</a>
+                          <a href="#" class="btn outline-btn mb-3" target="_blank">Register now</a>
                       </div>
                   </div>
               </div>
-              <div class="col-lg-4 col-md">
+              <div class="col-lg-3 col-md">
                   <div class="card popular-price text-center single-pricing-pack">
                       <div class="pt-4"><h5>Pro Team</h5></div>
                       <div class="pricing-img mt-4">
-                          <img src="img/standard.svg" alt="pricing img" class="img-fluid">
+                          <img src="%PUBLIC_URL%/marketing/img/pricing-team.svg" alt="pricing img" class="img-fluid">
                       </div>
                       <div class="card-header py-4 border-0 pricing-header">
                           <div class="h1 text-center mb-0">$<span
@@ -526,16 +526,17 @@
                               <li>Full-Data Encryption on Browser</li>
                               <li>Private Sessions</li>
                               <li>20 Users</li>
+                              <li>&nbsp;</li>
                           </ul>
                           <a href="#" class="btn solid-btn mb-3" target="_blank">Purchase now</a>
                       </div>
                   </div>
               </div>
-              <div class="col-lg-4 col-md">
+              <div class="col-lg-3 col-md">
                   <div class="card text-center single-pricing-pack">
                       <div class="pt-4"><h5>Pro Unlimited</h5></div>
                       <div class="pricing-img mt-4">
-                          <img src="img/unlimited.svg" alt="pricing img" class="img-fluid">
+                        <img src="%PUBLIC_URL%/marketing/img/pricing-unlimited.svg" alt="pricing img" class="img-fluid">
                       </div>
                       <div class="card-header py-4 border-0 pricing-header">
                           <div class="h1 text-center mb-0">$<span class="price font-weight-bolder">49.99</span></div>
@@ -545,11 +546,33 @@
                             <li>Everything from Basic, plus:</li>
                               <li>Unlimited Pro Accounts</li>
                               <li>All users from your domain are Pro automatically</li>
+                              <li>&nbsp;</li>
                           </ul>
                           <a href="#" class="btn outline-btn mb-3" target="_blank">Purchase now</a>
                       </div>
                   </div>
               </div>
+              <div class="col-lg-3 col-md">
+                <div class="card text-center single-pricing-pack">
+                    <div class="pt-4"><h5>Self-hosted</h5></div>
+                    <div class="pricing-img mt-4">
+                      <img src="%PUBLIC_URL%/marketing/img/pricing-self-hosted.svg" alt="pricing img" class="img-fluid">
+                    </div>
+                    <div class="card-header py-4 border-0 pricing-header">
+                        <div class="h1 text-center mb-0"><span class="price font-weight-bolder">Call us!</span></div>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-unstyled text-sm mb-4 pricing-feature-list">
+                          <li><em>Everything from Unlimited, plus:</em></li>
+                            <li>Support for installing self-hosting</li>
+                            <li>All users are Pro users</li>
+                            <li>Lifetime license</li>
+                            <li>&nbsp;</li>
+                        </ul>
+                        <a href="#" class="btn outline-btn mb-3" target="_blank">Purchase now</a>
+                    </div>
+                </div>
+            </div>
           </div>
           <div class="mt-5 text-center">
               <p class="mb-2">If you need custom services or Need more? <a href="#" class="color-secondary">
