--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -72,6 +72,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/marketing/css/owl.theme.default.min.css" class="marketing" />
   <link rel="stylesheet" href="%PUBLIC_URL%/marketing/css/style.css" class="marketing" />
   <link rel="stylesheet" href="%PUBLIC_URL%/marketing/css/responsive.css" class="marketing" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/marketing/css/custom.css" class="marketing" />
 
   <link rel="stylesheet" type="text/css" href="//wpcc.io/lib/1.0.2/cookieconsent.min.css" />
   <script src="//wpcc.io/lib/1.0.2/cookieconsent.min.js"></script>
@@ -480,7 +481,7 @@
               <div class="col-md-8">
                   <div class="section-heading text-center mb-5">
                       <span class="badge badge-primary badge-pill">For complete data safety and privacy</span>
-                      <h2>Subscribe today to <br><span>Retrospected Pro</span></h2>
+                      <h2>Retrospected Pro<br><span>Subscribe today</span></h2>
                       <p class="lead">
                         Enable full client-side encryption to guarantee that your retrospectives data cannot be seen outside of your company.
                       </p>
@@ -496,6 +497,7 @@
                       </div>
                       <div class="card-header py-4 border-0 pricing-header">
                           <div class="h1 text-center mb-0"><span class="price font-weight-bolder">Free</span></div>
+                          <div class="h4 text-center mb-0"><span class="price-month">&nbsp;</span></div>
                       </div>
                       <div class="card-body">
                           <ul class="list-unstyled text-sm mb-4 pricing-feature-list">
@@ -505,7 +507,7 @@
                               <li>Post grouping</li>
                               <li>Anonymouns Accounts</li>
                           </ul>
-                          <a href="#" class="btn outline-btn mb-3" target="_blank">Register now</a>
+                          <div style="height: 61px;">&nbsp;</div>
                       </div>
                   </div>
               </div>
@@ -516,9 +518,8 @@
                           <img src="%PUBLIC_URL%/marketing/img/pricing-team.svg" alt="pricing img" class="img-fluid">
                       </div>
                       <div class="card-header py-4 border-0 pricing-header">
-                          <div class="h1 text-center mb-0">$<span
-                                  class="price font-weight-bolder">9.99</span></div>
-
+                          <div class="h1 text-center mb-0">$<span class="price font-weight-bolder">9.99</span></div>
+                          <div class="h4 text-center mb-0"><span class="price-month">/month</span></div>
                       </div>
                       <div class="card-body">
                           <ul class="list-unstyled text-sm mb-4 pricing-feature-list">
@@ -528,7 +529,7 @@
                               <li>20 Users</li>
                               <li>&nbsp;</li>
                           </ul>
-                          <a href="#" class="btn solid-btn mb-3" target="_blank">Purchase now</a>
+                          <a href="/subscribe" class="btn solid-btn mb-3">Purchase now</a>
                       </div>
                   </div>
               </div>
@@ -540,6 +541,7 @@
                       </div>
                       <div class="card-header py-4 border-0 pricing-header">
                           <div class="h1 text-center mb-0">$<span class="price font-weight-bolder">49.99</span></div>
+                          <div class="h4 text-center mb-0"><span class="price-month">/month</span></div>
                       </div>
                       <div class="card-body">
                           <ul class="list-unstyled text-sm mb-4 pricing-feature-list">
@@ -548,7 +550,7 @@
                               <li>All users from your domain are Pro automatically</li>
                               <li>&nbsp;</li>
                           </ul>
-                          <a href="#" class="btn outline-btn mb-3" target="_blank">Purchase now</a>
+                          <a href="/subscribe" class="btn outline-btn mb-3">Purchase now</a>
                       </div>
                   </div>
               </div>
@@ -560,6 +562,7 @@
                     </div>
                     <div class="card-header py-4 border-0 pricing-header">
                         <div class="h1 text-center mb-0"><span class="price font-weight-bolder">Call us!</span></div>
+                        <div class="h4 text-center mb-0"><span class="price-month">&nbsp;</span></div>
                     </div>
                     <div class="card-body">
                         <ul class="list-unstyled text-sm mb-4 pricing-feature-list">
@@ -569,13 +572,13 @@
                             <li>Lifetime license</li>
                             <li>&nbsp;</li>
                         </ul>
-                        <a href="#" class="btn outline-btn mb-3" target="_blank">Purchase now</a>
+                        <a href="mailto:support@retrospected.com" class="btn outline-btn mb-3">Contact us</a>
                     </div>
                 </div>
             </div>
           </div>
           <div class="mt-5 text-center">
-              <p class="mb-2">If you need custom services or Need more? <a href="#" class="color-secondary">
+              <p class="mb-2">Any other question? <a href="mailto:support@retrospected.com" class="color-secondary">
                   Contact us
               </a></p>
           </div>
@@ -584,24 +587,19 @@
               <div class="col-md-6">
                   <div class="single-faq">
                       <h5>How can I pay for this?</h5>
-                      <p>Intrinsicly implement high standards in strategic theme areas via inexpensive solutions.
-                          Assertively conceptualize prospective bandwidth whereas client-based imperatives.</p>
+                      <p>Payments are handled by our partner, Stripe. No payment information is stored by Retrospected.</p>
                   </div>
               </div>
               <div class="col-md-6">
                   <div class="single-faq">
                       <h5>Is it possible to pay yearly?</h5>
-                      <p>Assertively iterate user friendly innovation without open-source markets. Monotonectally extend
-                          resource sucking manufactured products without high-payoff paradigms. Objectively customize
-                          ubiquitous information before economically sound relationships. </p>
+                      <p>Not yet, but we might add this possibility in the future.</p>
                   </div>
               </div>
               <div class="col-md-6">
                   <div class="single-faq">
-                      <h5>Do you offer discounts on multiple items?</h5>
-                      <p>Dramatically target focused testing procedures after holistic ideas. Collaboratively maximize
-                          high-payoff ROI and value-added products. Distinctively deliver cooperative collaboration and
-                          idea-sharing whereas customized</p>
+                      <h5>Do you give Pro licenses for free in some cases?</h5>
+                      <p>If you are using this product as a charity, or you are in education, send us an email and we'll sort out a free license for you: <a href="mailto:support@retrospected.com">contact us</a>.</p>
                   </div>
               </div>
               <div class="col-md-6">
@@ -614,15 +612,13 @@
               <div class="col-md-6">
                   <div class="single-faq">
                       <h5>Will I pay more for some features?</h5>
-                      <p>Enthusiastically pontificate resource-leveling supply chains whereas scalable markets.
-                          Authoritatively streamline resource maximizing methods of empowerment</p>
+                      <p>We only have 2 tiers: Free and Pro. All features are unlocked when you subscribe to a Pro account.</p>
                   </div>
               </div>
               <div class="col-md-6">
                   <div class="single-faq">
-                      <h5>Why are there no limits on the number of messages?</h5>
-                      <p>Assertively target turnkey ideas for market-driven portals. Appropriately e-enable world-class
-                          intellectual capital whereas 2.0 mindshare.</p>
+                      <h5>Is there any limit?</h5>
+                      <p>There is no limit on the amount of data stored, subject to fair-use policy.</p>
                   </div>
               </div>
           </div>
