--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -481,7 +481,9 @@
               <div class="col-md-8">
                   <div class="section-heading text-center mb-5">
                       <span class="badge badge-primary badge-pill">For complete data safety and privacy</span>
-                      <h2>Retrospected Pro<br><span>Subscribe today</span></h2>
+                      <br>
+                      <br>
+                      <h2>Retrospected Pro<br><span>Encryption and Private Sessions for your precious data</span></h2>
                       <p class="lead">
                         Enable full client-side encryption to guarantee that your retrospectives data cannot be seen outside of your company.
                       </p>
@@ -523,7 +525,7 @@
                       </div>
                       <div class="card-body">
                           <ul class="list-unstyled text-sm mb-4 pricing-feature-list">
-                              <li>Everything from Basic, plus:</li>
+                              <li><em>Everything from Basic, plus:</em></li>
                               <li>Full-Data Encryption on Browser</li>
                               <li>Private Sessions</li>
                               <li>20 Users</li>
@@ -545,7 +547,7 @@
                       </div>
                       <div class="card-body">
                           <ul class="list-unstyled text-sm mb-4 pricing-feature-list">
-                            <li>Everything from Basic, plus:</li>
+                            <li><em>Everything from Pro Team, plus:</em></li>
                               <li>Unlimited Pro Accounts</li>
                               <li>All users from your domain are Pro automatically</li>
                               <li>&nbsp;</li>
@@ -567,7 +569,7 @@
                     <div class="card-body">
                         <ul class="list-unstyled text-sm mb-4 pricing-feature-list">
                           <li><em>Everything from Unlimited, plus:</em></li>
-                            <li>Support for installing self-hosting</li>
+                            <li>Support for self-hosting</li>
                             <li>All users are Pro users</li>
                             <li>Lifetime license</li>
                             <li>&nbsp;</li>
