--- a/retro-board-app/public/index.html
+++ b/retro-board-app/public/index.html
@@ -445,24 +445,21 @@
                     <div class="single-feature">
                       <div class="d-flex align-items-center mb-2">
                         <span class="ti-key rounded mr-3 icon icon-color-1"></span>
-                        <h5 class="mb-0">No credentials stored</h5>
+                        <h5 class="mb-0">Client-side encryption (Pro Feature ⭐️)</h5>
                       </div>
                       <p>
-                        Retrospected does not store any credentials. When you
-                        log-in with your Google account (or GitHub, or
-                        Twitter...), we delegate the authentication to them
-                        and only store your username and picture. No password.
+                        Your data is encrypted locally (in your browser), and the decryption key is never sent to the Retrospected servers.
+                        This ensures that your data will never be visible by a third party, including us.
                       </p>
                     </div>
                     <div class="single-feature mb-4">
                       <div class="d-flex align-items-center mb-2">
                         <span class="ti-link rounded mr-3 icon icon-color-2"></span>
-                        <h5 class="mb-0">Private Sessions (Coming Soon!)</h5>
+                        <h5 class="mb-0">Private Sessions (Pro Feature ⭐️)</h5>
                       </div>
                       <p>
-                        For our corporate users, we are soon going to provide
-                        a way of securing a session and preventing
-                        unauthorized users from accessing them. Stay tuned!
+                        Lock access to your session with a click of a button to prevent anyone else from
+                        joining or seeing your data.
                       </p>
                     </div>
                   </div>
@@ -486,6 +483,9 @@
                       <h2>Retrospected Pro<br><span>Encryption and Private Sessions for your precious data</span></h2>
                       <p class="lead">
                         Enable full client-side encryption to guarantee that your retrospectives data cannot be seen outside of your company.
+                      </p>
+                      <p class="lead">
+                        You can pay in <em>USD</em>, <em>GBP</em> or <em>EUR</em>.
                       </p>
                   </div>
               </div>
